--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.azaless.cheerball.MainActivity">
+    tools:context="com.azaless.cheerball.view.ui.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,13 +27,13 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <!--<fragment-->
-            <!--android:id="@+id/garden_nav_fragment"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:name="androidx.navigation.fragment.NavHostFragment"-->
-            <!--app:defaultNavHost="true"-->
-            <!--app:navGraph="@navigation/nav_garden" />-->
+        <fragment
+            android:id="@+id/main_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_main" />
 
     </LinearLayout>
 
