--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,5 @@
     <dimen name="navigation_drawer_header_padding">16dp</dimen>
     <dimen name="navigation_drawer_image_width">100dp</dimen>
 
-    <dimen name="padding">16dp</dimen>
+    <dimen name="margin_normal">16dp</dimen>
 </resources>
