--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -4,12 +4,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-        <variable
-            name="viewModel"
-            type="com.azaless.cheerball.viewmodels.PlayerListViewModel" />
-    </data>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,11 +21,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:text="Country"
             android:textSize="56sp" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/player_list"
+            android:id="@+id/recyclerViewPlayer"
             android:name="com.azaless.cheerball.view.ui.player.PlayerListFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
