--- a/app/src/main/res/layout/list_item_player.xml
+++ b/app/src/main/res/layout/list_item_player.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/margin_normal">
+    android:padding="@dimen/margin_medium">
 
     <TextView
         android:id="@+id/textViewName"
