--- a/app/src/main/res/layout/list_item_all_team.xml
+++ b/app/src/main/res/layout/list_item_all_team.xml
@@ -13,7 +13,8 @@
         <ImageView
             android:id="@+id/imgFlag"
             android:layout_width="150dp"
-            android:layout_height="100dp" />
+            android:layout_height="100dp"
+            android:background="@drawable/border_black"/>
 
         <TextView
             android:id="@+id/textViewName"
