--- a/app/src/main/res/layout/fragment_groups_ball.xml
+++ b/app/src/main/res/layout/fragment_groups_ball.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!--<data>-->
         <!--<variable-->
@@ -14,15 +15,14 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="Groups Ball"
-            android:textSize="56sp"/>
-
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerViewGroup"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp"
+            tools:listitem="@layout/list_item_group" />
     </android.support.constraint.ConstraintLayout>
 
 </layout>
