--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -4,11 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!--<data>-->
-        <!--<variable-->
-            <!--name="viewModel"-->
-            <!--type="com.azaless.cheerball.viewmodels.TeamDetailViewModel" />-->
-    <!--</data>-->
+    <data>
+        <variable
+            name="viewModel"
+            type="com.azaless.cheerball.viewmodels.TeamDetailViewModel" />
+    </data>
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -30,6 +30,7 @@
                 android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:title="@{viewModel.team.name}"
                 app:toolbarId="@+id/toolbar">
 
                 <ImageView
@@ -38,6 +39,7 @@
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
+                    app:imageUrl="@{viewModel.team.crestUrl}"
                     app:layout_collapseMode="parallax" />
 
                 <android.support.v7.widget.Toolbar
@@ -66,10 +68,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                    tools:ignore="MissingConstraints"
                     tools:layout_editor_absoluteX="16dp"
-                    tools:listitem="@layout/list_item_player"
-                    tools:ignore="MissingConstraints" />
+                    tools:listitem="@layout/list_item_player" />
 
+                <EditText
+                    android:id="@+id/textViewTeamName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimaryDark"
+                    android:padding="@dimen/margin_medium"
+                    android:text="@{viewModel.teamName}" />
             </android.support.constraint.ConstraintLayout>
 
         </android.support.v4.widget.NestedScrollView>
