--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.azaless.cheerball.viewmodels.TeamDetailViewModel" />
@@ -67,6 +68,8 @@
                     android:id="@+id/recyclerViewPlayer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    app:adapterCustom="@{viewModel.adapter}"
+                    app:adapterValue="@{viewModel.players}"
                     app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                     tools:ignore="MissingConstraints"
                     tools:layout_editor_absoluteX="16dp"
