Set recyclerView nestedScrollingEnabled="false"

--- a/app/src/main/res/layout/fragment_groups_ball.xml
+++ b/app/src/main/res/layout/fragment_groups_ball.xml
@@ -19,6 +19,7 @@
             android:id="@+id/recyclerViewGroup"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:nestedScrollingEnabled="false"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="0dp"
