--- a/app/src/main/res/layout/fragment_team_detail.xml
+++ b/app/src/main/res/layout/fragment_team_detail.xml
@@ -68,6 +68,7 @@
                     android:id="@+id/recyclerViewPlayer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:nestedScrollingEnabled="false"
                     app:adapterCustom="@{viewModel.adapter}"
                     app:adapterValue="@{viewModel.players}"
                     app:layoutManagerCustom="@{viewModel.layoutManager}"
