--- a/app/src/main/res/layout/list_item_team_small.xml
+++ b/app/src/main/res/layout/list_item_team_small.xml
@@ -2,29 +2,77 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:padding="@dimen/margin_small">
+        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imgFlag"
-            android:layout_width="75dp"
-            android:layout_height="50dp"
-            android:background="@drawable/border_black"/>
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:gravity="center_vertical"
+            android:paddingRight="@dimen/margin_small"
+            android:paddingTop="@dimen/margin_small"
+            android:paddingBottom="@dimen/margin_small">
+
+            <ImageView
+                android:id="@+id/imgFlag"
+                android:layout_width="75dp"
+                android:layout_height="50dp"
+                android:background="@drawable/border_black" />
+
+            <TextView
+                android:id="@+id/textViewName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/margin_small"
+                android:layout_toRightOf="@id/imgFlag"
+                android:text="Braaaa" />
+
+
+        </RelativeLayout>
 
         <TextView
-            android:id="@+id/textViewName"
-            android:layout_width="wrap_content"
+            android:id="@+id/textViewRank"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/margin_small"
-            android:layout_toRightOf="@id/imgFlag"
-            android:text="Braaaa" />
+            android:layout_gravity="center"
+            android:layout_weight="0.25"
+            android:gravity="center"
+            android:text="5" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/textViewPoints"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="0.25"
+            android:gravity="center"
+            android:text="5" />
+
+        <TextView
+            android:id="@+id/textViewGoals"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="0.25"
+            android:gravity="center"
+            android:text="5" />
+
+        <TextView
+            android:id="@+id/textViewGoalsAgainst"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="0.25"
+            android:gravity="center"
+            android:text="5" />
+
+    </LinearLayout>
+
 
 </android.support.v7.widget.CardView>
